--- a/DeliverySolution/DeliveryApi/appsettings.json
+++ b/DeliverySolution/DeliveryApi/appsettings.json
@@ -6,12 +6,16 @@
     "ConnectionString": "http://localhost:9200"
   },
   "MySqlConfiguration": {
-    
+    "Server": "localhost",
+    "DbName": "delivery_db",
+    "UserName" : "delivery_db_user",
+    "Password": "delivery_db_password"
   },
-  "RabbitMQConfiguration": {
+  "RabbitMqConfiguration": {
     "HostName": "localhost",
     "UserName": "guest",
-    "Password": "guest"
+    "Password": "guest",
+    "ExchangeName": "delivery-exchange"
   },
   "Serilog": {
     "MinimumLevel": {
