--- a/DeliverySolution/DeliveryInfrastructure/DeliveryInfrastructure.csproj
+++ b/DeliverySolution/DeliveryInfrastructure/DeliveryInfrastructure.csproj
@@ -11,7 +11,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Dapper" Version="2.0.123" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5" />
+      <PackageReference Include="MySql.Data" Version="8.0.33" />
       <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
     </ItemGroup>
 
