--- a/DeliverySolution/docker-compose.yml
+++ b/DeliverySolution/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     build:
       context: .
       dockerfile: DeliveryApi/Dockerfile
+    restart: always
         
   rabbitmq:
     image: rabbitmq:3-management
