--- a/DeliverySolution/DeliveryBackground/DeliveryBackground.csproj
+++ b/DeliverySolution/DeliveryBackground/DeliveryBackground.csproj
@@ -23,4 +23,8 @@
         <Link>.dockerignore</Link>
       </Content>
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\DeliveryInfrastructure\DeliveryInfrastructure.csproj" />
+    </ItemGroup>
 </Project>
