--- a/DeliverySolution/DeliveryApi/Properties/launchSettings.json
+++ b/DeliverySolution/DeliveryApi/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7145;http://localhost:5212",
+      "applicationUrl": "https://localhost:7145",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
