Add Worker & RabbitMq delays configurations

--- a/DeliverySolution/DeliveryApi/appsettings.json
+++ b/DeliverySolution/DeliveryApi/appsettings.json
@@ -13,7 +13,8 @@
     "HostName": "localhost",
     "UserName": "guest",
     "Password": "guest",
-    "ExchangeName": "delivery-exchange"
+    "ExchangeName": "delivery-exchange",
+    "RetryDelayInMinutes": 0.5
   },
   "Serilog": {
     "MinimumLevel": {
