--- a/DeliverySolution/DeliveryBackground/appsettings.json
+++ b/DeliverySolution/DeliveryBackground/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "WorkerConfiguration": {
+    "DelayInMinutes": 60
+  },
   "ElasticSearchConfiguration": {
     "ConnectionString": "http://localhost:9200"
   },
@@ -10,7 +13,8 @@
     "HostName": "localhost",
     "UserName": "guest",
     "Password": "guest",
-    "ExchangeName": "delivery-exchange-expiry"
+    "ExchangeName": "delivery-exchange-expiry",
+    "RetryDelayInMinutes": 0.5 
   },
   "Serilog": {
     "MinimumLevel": {
